methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:16: error: type mismatch;
 found   : Unit
 required: Boolean
      if (sawBaggle == true){
      ^